--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.2",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0"
