--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "postcss": "^8.4.12",
     "prettier": "^2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.10",
+    "prisma": "^4.2.1",
     "tailwindcss": "^3.0.24",
     "typescript": "4.6.3"
   }
