--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@tailwindcss/forms": "^0.5.2",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-hook-form": "^7.35.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.2.3",
