--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,5 +27,10 @@
     "tailwind.config.js",
     "prettier.config.js",
     "postcss.config.js"
-  ]
+  ],
+  "rules": {
+    "@typescript-eslint/explicit-function-return-type": "warn",
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": "warn"
+  }
 }
